// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`B: Python output snapshot regression GPIB connection type 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"GPIB0::7::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass


    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression USB connection type 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"USB0::0x0699::0x0368::C012345::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass


    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression empty steps → structural skeleton 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass


    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression nested groups 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    # Group: Outer
    scpi.write(\\"*RST\\")
    log_cmd(\\"*RST\\", \\"\\")
    # Group: Inner
    idn = scpi.query(\\"*IDN?\\").strip()
    log_cmd(\\"*IDN?\\", idn)
    time.sleep(0.5)

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression python snippet step 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    data = idn.split(\\",\\")
    print(f\\"Model: {data[1]}\\")

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression realistic multi-step sequence 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    # Configure acquisition
    scpi.write(\\"ACQ:STATE STOP\\")
    log_cmd(\\"ACQ:STATE STOP\\", \\"\\")
    scpi.write(\\"CH1:SCALE 0.5\\")
    log_cmd(\\"CH1:SCALE 0.5\\", \\"\\")
    opc = scpi.query(\\"*OPC?\\").strip()
    log_cmd(\\"*OPC?\\", opc)
    time.sleep(1)
    scpi.write(\\"ACQ:STATE RUN\\")
    log_cmd(\\"ACQ:STATE RUN\\", \\"\\")
    idn = scpi.query(\\"*IDN?\\").strip()
    log_cmd(\\"*IDN?\\", idn)

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression set_and_query step 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    scpi.write(\\"CH1:SCALE 2.0\\")
    verified = scpi.query(\\"CH1:SCALE?\\").strip()
    log_cmd(\\"CH1:SCALE?\\", verified)

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression single query with saveAs 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    idn = scpi.query(\\"*IDN?\\").strip()
    log_cmd(\\"*IDN?\\", idn)

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression single write step 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    scpi.write(\\"ACQ:STATE RUN\\")
    log_cmd(\\"ACQ:STATE RUN\\", \\"\\")

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression socket connection type 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::5025::SOCKET\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = \\\\n\\"  # Socket requires line termination
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    scpi.write(\\"*RST\\")
    log_cmd(\\"*RST\\", \\"\\")

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;

exports[`B: Python output snapshot regression with enablePrintMessages option 1`] = `
"#!/usr/bin/env python3
\\"\\"\\"
Generated by TekAutomate
Backend: pyvisa
Host: 192.168.1.100
\\"\\"\\"
import argparse, time, pathlib
import pyvisa


def main():
    p = argparse.ArgumentParser()
    p.add_argument(\\"--visa\\", default=\\"TCPIP::192.168.1.100::INSTR\\")
    p.add_argument(\\"--timeout\\", type=float, default=5000)
    args = p.parse_args()
    
    print(f\\"Connecting via PyVISA to {args.visa}...\\")
    rm = pyvisa.ResourceManager()
    scpi = rm.open_resource(args.visa)
    scpi.timeout = int(args.timeout * 1000)
    scpi.write_termination = \\"\\\\n\\"
    scpi.read_termination = None  # binary safe
    
    idn = scpi.query(\\"*IDN?\\").strip()
    print(f\\"[OK] Connected: {idn}\\")

    def log_cmd(cmd, resp):
        pass

    print(\\"Reset\\")
    scpi.write(\\"*RST\\")
    log_cmd(\\"*RST\\", \\"\\")
    print(\\"Get IDN\\")
    idn = scpi.query(\\"*IDN?\\").strip()
    log_cmd(\\"*IDN?\\", idn)
    print(\\"Sleeping for 1s\\")
    time.sleep(1)

    try:
        err = scpi.query('ALLEV?').strip()
        log_cmd('ALLEV?', err)
    except Exception:
        pass
    scpi.close()
    rm.close()
    print(\\"[OK] Complete\\")

if __name__ == \\"__main__\\":
    main()
"
`;
